
syntax = "proto3";

service ProductService {
    rpc AddProduct (ProductRequest) returns (ProductResponse);
    rpc GetAllProducts (Empty) returns (ProductList);
    rpc OrderProduct (OrderRequest) returns (OrderResponse);
}

message ProductRequest {
    string title = 1;
    string price = 2;
}

message ProductResponse {
    string message = 1;
}

message ProductList {
    repeated ProductRequest products = 1; 
}

message OrderRequest {
    string productId = 1;
    int32 quantity = 2;
}

message OrderResponse {
    string message = 1;
}

message Empty {}











